--- a/index.html
+++ b/index.html
@@ -9,6 +9,16 @@
         })(window, document, "clarity", "script", "nmg327346o");
     </script>
     <!-- microsoft clarity -->
+     <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-K2KRDHZCWN"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-K2KRDHZCWN');
+    </script>
+    
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Surya's - Portfolio</title>
