profile pic update

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
        
 
                 <div class="profile-pic-div">
-                    <img class="profile-pic" src="assets/profile .jpg" alt="">
+                    <img class="profile-pic" src="assets/profile-1.jpg" alt="">
                 </div>     
         </div> 
     </section>
@@ -89,7 +89,7 @@
 
             <div class="about-contents">
                 <div class="about-pic-div">
-                    <img class="about-pic" src="assets/profile .jpg" alt="">
+                    <img class="about-pic" src="assets/about.jpg" alt="">
                 </div>
 
                 <div class="about-contents-info">
