--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
     <header>
         <nav class="container">
                 <div class="logo">Surya B</div>
-                <div class="navlinks">
+                <div class="navlinks" id="navlinks">
                     <ul> 
-                        <li ><a id="home-li"  class="nav-ele" href="#home">Home</a></li>
+                        <li><a id="home-li"  class="nav-ele" href="#home">Home</a></li>
                         <li><a id="nav-ele" href="#about">About</a></li>
                         <li><a id="nav-ele" href="#skills">Skills</a></li>
                         <li><a id="nav-ele" href="#projects">Projects</a></li>
-                        <li><a id="nav-ele" href="#contact">Contact Me</a></li>
+                        <li><a id="nav-ele"  href="#contact">Contact Me</a></li>
                     </ul>
                 </div>
                 <div class="hamburger">
@@ -56,12 +56,12 @@
     <section id="home">
         <div class="profile container">
                 <div class="icon-container">
-                    <a href="https://github.com/saisurya7860/saisurya7860"><i class="fa-brands fa-github fa-lg fa-beat" style="color: #6e57e0;"></i></a>
-                    <a href="https://www.linkedin.com/in/surya-btechi/"><i class="fa-brands fa-linkedin-in fa-lg fa-beat" style="color: #6e57e0;"></i></a>                    
+                    <a href="https://github.com/saisurya7860/saisurya7860"><i class="fa-brands fa-github fa-lg fa-beat" style="color: #0d6efd;"></i></a>
+                    <a href="https://www.linkedin.com/in/surya-btechi/"><i class="fa-brands fa-linkedin-in fa-lg fa-beat" style="color: #0d6efd;"></i></a>                    
                 </div>
         
                 <div class="profile-des">
-                    <h1>Hi, I am Surya</h1>
+                    <h1>Hi, I am <span> Surya </span></h1>
                     <div class="role">Frontend Developer</div>
           
                     <p>
@@ -275,7 +275,7 @@
                     <div class="project-des">
                         <h2>My Portfoilio</h2>
                         <p class="project-duration">April 2024 - May 2024</p>
-                        <p class="project-info">Welcome to my portfolio, showcasing my projects in AI, ML, Frontend.</p>
+                        <p class="project-info">Welcome to my portfolio, showcasing my projects in AI, ML, Frontend projects.</p>
                     </div>
                     <div class="git-butn">
                         <a href=""><button class="gitrepo">GitHub Repo</button></a>
@@ -297,7 +297,7 @@
             <p class="subtitle">My Journey</p>
 
             <div class="edu-icon">
-                <i class="fa-solid fa-graduation-cap" style="color: #6e57e0;"></i>Education
+                <i class="fa-solid fa-graduation-cap" style="color: #a19fad;"></i>Education
             </div>
 
             <div class="qualification-content">
@@ -378,7 +378,7 @@
 
                     <a href="https://wa.me/9952362697">
                         <div class="my-info">
-                            <div><i class="fa-brands fa-whatsapp  fa-xl" style="color: #6e57e0;"></i></div>
+                            <div><i class="fa-brands fa-whatsapp  fa-xl" style="color: #5b5b5b;"></i></div>
                             <div class="contact-via">
                                 Whatsapp Me
                                 <div class="contact-num">+91 9952362697</div>
@@ -388,7 +388,7 @@
 
                     <a href="">
                         <div class="my-info">
-                            <div><i class="fa-solid fa-envelope fa-xl" style="color: #6e57e0;"></i></div>
+                            <div><i class="fa-solid fa-envelope fa-xl" style="color:#5b5b5b "></i></div>
                             <div class="contact-via">
                                 Email
                                 <div class="contact-num">saisurya7860@gmail.com</div>
@@ -398,7 +398,7 @@
 
                     <a href="https://www.linkedin.com/in/surya-btechi/">
                         <div class="my-info">
-                            <div><i class="fa-brands fa-linkedin fa-xl" style = "color :#6e57e0"></i></div>
+                            <div><i class="fa-brands fa-linkedin fa-xl" style = "color :#5b5b5b"></i></div>
                             <div class="contact-via">
                                 Linkedin
                                 <div class="contact-num">In/surya B</div>
@@ -408,7 +408,7 @@
 
                     <a href="">
                         <div class="my-info">
-                            <div><i class="fa-solid fa-location-dot fa-xl" style="color: #6e57e0;"></i></div>
+                            <div><i class="fa-solid fa-location-dot fa-xl" style="color: #5b5b5b;"></i></div>
                             <div class="contact-via">
                                 Location
                                 <div class="contact-num">Coimbatore, India</div>
