--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <section id="home">
         <div class="profile container">
                 <div class="icon-container">
-                    <a href="https://github.com/saisurya7860/saisurya7860"><i id ="socio-icon" class="fa-brands fa-github fa-lg fa-beat"></i></a>
+                    <a href="https://github.com/saisurya7860"><i id ="socio-icon" class="fa-brands fa-github fa-lg fa-beat"></i></a>
                     <a href="https://www.linkedin.com/in/surya-btechi/">   <i id ="socio-icon" class="fa-brands fa-linkedin-in fa-lg fa-beat"></i></a>                    
                 </div>
         
