--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <link rel="stylesheet" href="Style.css">
     <link rel="stylesheet" href="Mediaqueries.css">
     <link rel="icon" href="assets/Surya-logo.png">
-    <link rel="manifest" href="/manifest.json">
+    <link rel="manifest" href="manifest.json">
 
 </head>
 <body>
