--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <link rel="stylesheet" href="Mediaqueries.css">
     <link rel="icon" href="assets/Surya-logo.png">
     <link rel="icon" href="favicon.ico" sizes="any" />
-    <link rel="manifest" href="/manifest.json">
+    <link rel="manifest" href="manifest.json">
 
 </head>
 <body>
