project 4 name change

--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
                 <div class="project-card">
                     <img class="project-img" src="assets/faceintuit.png" alt="">
                     <div class="project-des">
-                        <h2>SIH FACEINTUIT</h2>
+                        <h2>FACEINTUIT</h2>
                         <p class="project-duration">Aug-2024 Sept-2024</p>
                         <p class="project-info">Developed an website for Smart India Hackathon 2024 that documents of our ML project. </p>
                     </div>
