copyright span color changed

--- a/index.html
+++ b/index.html
@@ -497,7 +497,7 @@
 
         </div> <!--footercontent-->
 
-        <div class="copyright">&copy; Designed & developed by Surya B. All rights reserved</div>
+        <div class="copyright">&copy; Designed & developed by <span>Surya B</span>. All rights reserved</div>
     </footer>
 
     <!-- footer completed -->
