links target set to blank

--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
     <section id="home">
         <div class="profile container">
                 <div class="icon-container">
-                    <a href="https://github.com/saisurya7860"><i id ="socio-icon" class="fa-brands fa-github fa-lg fa-beat"></i></a>
-                    <a href="https://www.linkedin.com/in/surya-btechi/">   <i id ="socio-icon" class="fa-brands fa-linkedin-in fa-lg fa-beat"></i></a>                    
+                    <a href="https://github.com/saisurya7860" target="_blank"><i id ="socio-icon" class="fa-brands fa-github fa-lg fa-beat"></i></a>
+                    <a href="https://www.linkedin.com/in/surya-btechi/" target="_blank">   <i id ="socio-icon" class="fa-brands fa-linkedin-in fa-lg fa-beat"></i></a>                    
                 </div>
         
                 <div class="profile-des">
@@ -398,7 +398,7 @@
 
                 <div class="contact-left-sec">
 
-                    <a href="https://wa.me/9952362697">
+                    <a href="https://wa.me/9952362697" target="_blank">
                         <div class="my-info">
                             <div><i class="fa-brands fa-whatsapp  fa-xl" id ="socio-icon"></i></div>
                             <div class="contact-via">
@@ -408,7 +408,7 @@
                         </div>
                     </a>
 
-                    <a href="">
+                    <a href="mailto:saisurya7860@gmail.com" target="_blank">
                         <div class="my-info">
                             <div><i class="fa-solid fa-envelope fa-xl" id ="socio-icon"></i></div>
                             <div class="contact-via">
@@ -418,7 +418,7 @@
                         </div>
                     </a>
 
-                    <a href="https://www.linkedin.com/in/surya-btechi/">
+                    <a href="https://www.linkedin.com/in/surya-btechi/" target="_blank">
                         <div class="my-info">
                             <div><i class="fa-brands fa-linkedin fa-xl" id ="socio-icon"></i></div>
                             <div class="contact-via">
