skill card dynamic update

--- a/index.html
+++ b/index.html
@@ -141,104 +141,10 @@
             <h1 class="title">Skills</h1>
             <p class="subtitle">My Tech Stack</p>
 
-            <div class="skillcontent">
-
-                <div class="skillcard">
-                    <div class="skill-title">
-                        <p>Frontend Developer</p>
-                    </div><!--Skill Title-->
-
-                    <div class="skill-columns">
-
-                        <div class="skill-stack">
-                            <div class="skill">
-                                <i class="fa-brands fa-html5 fa-xl" style="color: #e44d26;"></i>
-                                <div>HTML</div>                               
-                            </div>
-
-                            <div class="skill">
-                                <i class="fa-brands fa-css3-alt fa-lg" style="color: #238cc8;"></i>
-                                <div>CSS</div>
-                            </div>
-
-                            <div class="skill">
-                                <i class="fa-brands fa-js fa-lg" style="color: #f0db4f;"></i>
-                                <div>Javascript</div>
-                            </div>
-
-                        </div> <!--skill stack cloumn1-->
-
-                        <div class="skill-stack">
-                            <div class="skill">
-                                <i class="fa-brands fa-bootstrap fa-lg" style="color: #7911f8;"></i>
-                                <div>Bootstrap</div>
-                            </div>
-
-                            <div class="skill">
-                                <i class="fa-brands fa-git-alt fa-lg" style="color: #f34f29;"></i>
-                                <div>Git</div>
-                            </div>
-
-                            <div class="skill">
-                                <i class="fa-brands fa-github fa-lg" style="color: #181616;"></i>
-                                <div>GitHub</div>   
-                            </div>
-
-                        </div> <!--Skill stack Column2-->
-
-                    </div><!--Skill stack-->
-
-                </div> <!--Skill card-->
-
-                <div class="skillcard">
-                    <div class="skill-title">
-                        <p>AI/ML Developer</p>
-                    </div><!--Skill Title-->
-
-                    <div class="skill-columns">
-
-                        <div class="skill-stack">
-                            <div class="skill">
-                                <img src="assets/icons8-python-32.png" class="AIML-icons">
-                                <div>Python</div>                        
-                            </div>
-
-                            <div class="skill">
-                                <img src="assets/data.png" class="AIML-icons">
-                                <div>Data Structures</div>
-                            </div>
-
-                            <div class="skill">
-                                <img src="assets/algo.png" class="AIML-icons">
-                                <div>ML Algorithms</div>
-                            </div>
-
-                        </div> <!--skill stack cloumn1-->
-
-                        <div class="skill-stack">
-                            <div class="skill">
-                                <img src="assets/statistics.png" class="AIML-icons">
-                                <div>Statistics</div>
-                            </div>
-
-                            <div class="skill">
-                                <i class="fa-brands fa-git-alt fa-lg" style="color: #f34f29;"></i>
-                                <div>Git</div>
-                            </div>
-
-                            <div class="skill">
-                                <i class="fa-brands fa-github fa-lg" style="color: #181616;"></i>
-                                <div>Github</div>
-                            </div>
-
-                        </div> <!--Skill stack Column2-->
-
-                    </div><!--Skill stack-->
-
-                </div> <!--Skill card-->
-
+ 
+                <div class="skill-js-container"></div>
             
-            </div> <!--skill-content-->
+            <!--skill-content-->
           
 
         </div> 
