--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                         I am a final-year B.Tech student specializing in Artificial Intelligence and Data Science, driven by a passion for pushing the boundaries of technology. Proficient in Python, I seamlessly blend coding with creativity to solve complex problems. I am eager to contribute to cutting-edge projects, innovate with impactful solutions, and make a lasting mark in the tech industry.
                     </p> 
                     <div class="resume-btn">
-                        <button onclick = "window.open('./assets/Resume_Surya B.pdf')">Download CV</button>
+                        <button onclick = "window.open('./assets/ Resume_Surya_B_SEP24.pdf')">Download CV</button>
                     </div>
                 </div>
 
