data js file created and data from general script file is transfered to data js file

--- a/index.html
+++ b/index.html
@@ -357,10 +357,8 @@
     </footer>
 
     <!-- footer completed -->
-
+    <script src="Script.js"></script>
+    <script src="data.js"></script>
 </body>
-<script src="Script.js">
-   
 
-</script>
 </html>
