abt section dynamic js added

--- a/index.html
+++ b/index.html
@@ -88,46 +88,7 @@
             <h1 class="title">About Me</h1>
             <p class="subtitle">Introduction</p>
 
-            <div class="about-contents">
-                <div class="about-pic-div">
-                    <img class="about-pic" src="assets/about.jpg" alt="">
-                </div>
-
-                <div class="about-contents-info">
-
-                    <div class="total-cards">
-                        <a href="#qualification">  
-                            <div class="card">
-                                <i class="fa-solid fa-award fa-lg"></i>
-                                <p>Qualification</p>
-                                <div>Undergrad</div>
-                            </div>
-                        </a> 
-
-                        <a href="#projects">  
-                            <div class="card">
-                                <i class="fa-solid fa-lg fa-suitcase"></i>
-                                <p>Completed</p>
-                                <div>3+ Projects</div>
-                            </div>
-                        </a> 
-                        
-                        <a href="#contact">  
-                            <div class="card">
-                                <i class="fa-solid fa-lg fa-headphones"></i>
-                                <p>Support</p>
-                                <div>24/7</div>
-                            </div>
-                        </a>     
-                    </div> <!--Cards-->
-
-                    <div class="description">
-                        I am a Python developer with expertise in AI, machine learning, deep learning, and front-end development. I am eager to leverage my skills in an AI/ML Engineer role, delivering innovative solutions to complex challenges.
-                    </div> <!--description-->
-
-                </div><!--about contents info-->
-
-            </div> <!--about contents-->
+            <div class="about-js-container"></div>
 
 
         </div>
