contact section dynamic js added

--- a/index.html
+++ b/index.html
@@ -115,72 +115,8 @@
         <div class="contact container">
             <h1 class="title">Contact Me</h1>
             <p class="subtitle">Connect with me</p>
-
-            <div class="contact-content">
-
-                <div class="contact-left-sec">
-
-                    <a href="https://wa.me/9952362697" target="_blank">
-                        <div class="my-info">
-                            <div><i class="fa-brands fa-whatsapp  fa-xl" id ="socio-icon"></i></div>
-                            <div class="contact-via">
-                                Whatsapp Me
-                                <div class="contact-num">+91 9952362697</div>
-                            </div>
-                        </div>
-                    </a>
-
-                    <a href="mailto:saisurya7860@gmail.com" target="_blank">
-                        <div class="my-info">
-                            <div><i class="fa-solid fa-envelope fa-xl" id ="socio-icon"></i></div>
-                            <div class="contact-via">
-                                Email
-                                <div class="contact-num">saisurya7860@gmail.com</div>
-                            </div>
-                        </div>
-                    </a>
-
-                    <a href="https://www.linkedin.com/in/surya-btechi/" target="_blank">
-                        <div class="my-info">
-                            <div><i class="fa-brands fa-linkedin fa-xl" id ="socio-icon"></i></div>
-                            <div class="contact-via">
-                                Linkedin
-                                <div class="contact-num">In/surya B</div>
-                            </div>
-                        </div>
-                    </a>
-
-                    <a href="">
-                        <div class="my-info">
-                            <div><i class="fa-solid fa-location-dot fa-xl" id ="socio-icon"></i></div>
-                            <div class="contact-via">
-                                Location
-                                <div class="contact-num">Coimbatore, India</div>
-                            </div>
-                        </div>
-                    </a>
-
-                </div> <!--contact-left-sec-->
-
-
-                <div class="contact-right-sec">
-                    <div class="contact-textbox">
-                        <label for class="contact_label">Name</label>
-                        <input class="contact-input" type="text">
-                    </div>
-
-                    <div class="contact-textbox">
-                        <label for class="contact_label">Email</label>
-                        <input class="contact-input" type="email">
-                    </div>
-
-                    <div class="contact-textbox">
-                        <label for class="contact_label">Project</label>
-                        <textarea class="txt-box" cols="0" rows="5"></textarea>
-                    </div>
-                </div> <!--contact -right-sec-->
-
-            </div> <!--Contact-content-->
+            
+            <div class="contact-container"></div>
   
          </div> <!--contact container-->
     </section>
